--- a/results.html
+++ b/results.html
@@ -6,7 +6,7 @@
 <link rel="shortcut icon" type="x-icon" href="icon.png">
 <meta charset="utf-8">
 <script>
-  version = "Test Edition #1" //Remember to update this before making changes to the test itself!
+  version = "Version 1.0" //Remember to update this before making changes to the test itself!
 </script>
 </head>
 <script type="application/javascript"
@@ -49,7 +49,7 @@
 </div>
 <h2>Personality Type: <span class="weight-300" id="ideology-label"></span></h2>
 <p>This is a four-letter summary of your results. <b>x</b> indicates a neutral position.</p>
-<p>You can send these results by copying and pasting the URL at the top of the page or screenshotting the image. If you have any suggestions or constructive criticism, feel free to get in contact with myself and my roommates in our <a href="https://discord.gg/Btf5nfK">Discord channel</a>.</p>
+<p>You can send these results by copying and pasting the URL at the top of the page or copying the image at the very bottom of the page. If you have any suggestions or constructive criticism, feel free to get in contact with myself and my roommates in our <a href="https://discord.gg/Btf5nfK">Discord channel</a>.</p>
 <p>Confused about what the values mean? Head back to the 8nook homepage for more information!
 <img id="8nook-chart" src="chart.png" height="800pt" class="center"/>
 <hr/>
