--- a/results.html
+++ b/results.html
@@ -50,7 +50,8 @@
 <h2>Personality Type: <span class="weight-300" id="ideology-label"></span></h2>
 <p>This is a four-letter summary of your results. <b>x</b> indicates a neutral position.</p>
 <p>You can send these results by copying and pasting the URL at the top of the page or copying the image at the very bottom of the page. If you have any suggestions or constructive criticism, feel free to get in contact with myself and my roommates in our <a href="https://discord.gg/Btf5nfK">Discord channel</a>.</p>
-<p>Confused about what the values mean? Head back to the 8nook homepage for more information!
+<p>Confused about what the values mean? Head back to the 8nook homepage for more information!</p>
+<p><b>NOTE:</b> Due to the regrettable limitations of the alphabet, sOcial is <b>O</b> and sTructure is <b>T</b>.
 <img id="8nook-chart" src="chart.png" height="800pt" class="center"/>
 <hr/>
 <img src="" id="banner">
